Bug 987408 - Correct the default features space check pref name. r=mkato, a=1.4+